syntax = "proto3";

option csharp_namespace = "Grpc";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

package CookiePackage;

service CookieContract {
  rpc GetRandomCookie (google.protobuf.Empty) returns (CookieResponse) {
    option (google.api.http) = {
      get: "/v1/getrandomcookie"
    };
  }
}

message CookieResponse {
  int32 id = 1;
  string message = 2;
}
